@@ -136,6 +136,22 @@
             android:text="@string/title_inventory"
             android:onCheckedChanged="@{() -> sheet.checkLimitReached()}" />
 
+          <com.google.android.material.checkbox.MaterialCheckBox
+            android:id="@+id/tasks"
+            style="@style/Widget.Grocy.CheckBox"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/title_tasks"
+            android:onCheckedChanged="@{() -> sheet.checkLimitReached()}" />
+
+          <com.google.android.material.checkbox.MaterialCheckBox
+            android:id="@+id/task_add"
+            style="@style/Widget.Grocy.CheckBox"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/title_task_add"
+            android:onCheckedChanged="@{() -> sheet.checkLimitReached()}" />
+
         </LinearLayout>
 
         <LinearLayout
